# novacirrus

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: routeTree.gen.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  connections.rs  error.rs  ftp.rs  lib.rs  localfs.rs  logging.rs  main.rs  remote.rs  s3.rs  secret_store.rs  session.rs  sftp.rs  taxonomy.rs
src/components/cirrus/: ConfirmDialog.tsx  ConnectSheet.tsx  ContextMenu.tsx  DebugLogPanel.tsx  FilePane.tsx  Resize.tsx  Screen.tsx  SettingsSheet.tsx  Sidebar.tsx  TitleBar.tsx  TransferQueue.tsx  WindowFrame.tsx
src/hooks/: use-connections.ts  use-focus-trap.ts  use-modal-esc.ts  use-shortcut.ts  use-theme.ts
src/lib/cirrus/: errors.ts  ipc.ts  logs.ts  toast.tsx  transfers.ts  types.ts
src/routes/: __root.tsx  connections.tsx  index.tsx
