[package]
name = "novacirrus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "novacirrus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
bytes = "1"
parking_lot = "0.12"
log = { version = "0.4", features = ["std"] }
async-trait = "0.1"
russh = "0.60"
russh-sftp = "2"
suppaftp = { version = "8", default-features = false, features = ["tokio-rustls-ring", "deprecated"] }
tokio-util = { version = "0.7", features = ["compat"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

# macOS: biometric (Touch ID) keychain backend via the data-protection keychain.
# OSX_10_15 enables `use_protected_keychain` (the data-protection keychain API).
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_15"] }

